# minishell

./: CMakeLists.txt  main.c
includes/: parser.h  utils.h
sources/libft/: Makefile
sources/libft/inc/: libft.h
sources/libft/src/io/ft_printf/: LIBFT_DIR  Makefile
sources/libft/src/lst/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c
sources/libft/src/std/: ft_calloc.c
sources/parser/: append_token.c  append_token_ls.c  append_token_string.c  handle_general_state.c  handle_in_ampresand_state.c  handle_in_and_state.c  handle_in_backslash_state.c  handle_in_double_quotes_state.c  handle_in_greater_state.c  handle_in_or_state.c  handle_in_pipe_state.c  handle_in_redir_append_state.c  handle_in_redir_input_state.c  handle_in_redir_output_state.c  handle_in_semicolon_state.c  handle_in_single_quotes_state.c  handle_in_string_state.c  handle_initial_state.c  handle_piped_state.c
sources/utils/: ls_append.c  ls_length.c  ls_to_string.c
